stage0/tests/snapshots/program__tests_fixtures_programs_basic_declared_record_values.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/declared_record_values.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
10
20
stderr:
<empty>
