stage0/tests/snapshots/program__tests_fixtures_programs_basic_empty_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/empty_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:

stderr:
<empty>
