stage0/tests/snapshots/program__tests_fixtures_programs_basic_external_generic_send_decl.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/external_generic_send_decl.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
external generic send
stderr:
<empty>
