stage0/tests/snapshots/program__tests_fixtures_programs_basic_external_send_name_override.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/external_send_name_override.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
not an actor send
stderr:
<empty>
