stage0/tests/snapshots/program__tests_fixtures_programs_basic_gc_allocation_pressure.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/gc_allocation_pressure.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
heap
trash
more
stderr:
<empty>
