stage0/tests/snapshots/program__tests_fixtures_programs_basic_generic_record_field_access.snap
---
source: tests/fixtures.rs
assertion_line: 2079
expression: transcript
---
fixture: tests/fixtures/programs/basic/generic_record_field_access.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
