stage0/tests/snapshots/program__tests_fixtures_programs_basic_hello_statement.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/hello_statement.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
hello from a statement
stderr:
<empty>
